--- a/css-basics_button-styles/css/styles.css
+++ b/css-basics_button-styles/css/styles.css
@@ -30,18 +30,31 @@ button {
 /* Add your CSS styles below this line. Feel free to replace the comments with your code. Make sure not to put your code into the comments, because then nothing will happen. */
 
 .button1 {
+  border-radius: 20px 5px;
+
   /*Style me! Change my border, set a border radius or what you want to try out. :) */
 }
 
 .button2 {
+  color: rebeccapurple;
+  background-color: gold;
+  font-weight: bold;
+
   /*Style me! Change my color, or my background-color. Or both! You can test out different color modes here - like HEX, RGB, ... */
 }
 
 .button3 {
+  font-family: fantasy;
+  font-size: larger;
+  outline: double violet;
   /*Style me! You can test out changing the font, or font size, ...*/
 }
 
 .button4 {
+  box-shadow: 20px 10px 20px violet;
+  color: rebeccapurple;
+  font-weight: bold;
+
   /*Style me! Can you add a shadow to this button? Maybe play around with the shadow properties, as well? You can even color the shadow, make it bigger or smaller, ... */
 }
 
