--- a/css-basics_pokemon-page/css/styles.css
+++ b/css-basics_pokemon-page/css/styles.css
@@ -4,12 +4,15 @@
 
 /* Task 1: First of all we want to adjust how the size of our elements is calculated when working with CSS. Do you know how to switch from "content-box" to "border-box"? */
 
-/* your solution */
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 /* Task 2: Let's work on some basic stylings that we want to apply to all elements of your code via inheritance. Which selector do we need for this? */
 
 /* add selector */
- {
+body {
   font-family: monospace;
   font-size: 1rem;
   line-height: 1.5;
@@ -20,7 +23,11 @@
 
 /* Task 3: To set the line height to 1.5 is good for texts, because of accessibility concerns, but for the headings it seems too much. Let's change this by giving our headings a line height of 1.2: */
 
-/* your solution */
+h1,
+h2,
+h3 {
+  line-height: 1.2;
+}
 
 /* Task 4: Now we want to give our h1 element more styles to shine! Add the following styles by writing the correct declarations inside of the declaration block of the next CSS rule:
 
@@ -31,6 +38,10 @@
 */
 
 .title {
+  background-color: white;
+  margin-top: 0;
+  padding: 10px;
+  text-align: center;
   /* your solution */
 }
 
@@ -45,7 +56,14 @@
 */
 
 section {
-  /* your solution */
+  background-color: white;
+  padding: 20px;
+  margin: 10px;
+  border-left: solid 5px orange;
+}
+
+.favourites {
+  border-color: gold;
 }
 
 /* ------- Headings Part 2 ------- */
@@ -59,7 +77,13 @@ section {
 */
 
 .subtitle {
-  /* your solution */
+  text-decoration: underline solid 3px gold;
+  text-underline-offset: under;
+  display: ;
+}
+
+.favourites .subtitle {
+  text-decoration: underline solid 3px orange;
 }
 
 /* ------- List ------- */
@@ -67,14 +91,9 @@ section {
 /* Task 7: Last but not least! We want to style our list with our favorite Pokémon. Which selector do we need? And also add values for the padding. */
 
 /* add selector */
- {
-  list-style: "🧡";
-  padding-left: /* add value */ ;
-}
-
-/* add selector */
- {
-  padding-left: /* add value */ ;
+li {
+  list-style: "🪲";
+  padding-left: 7px;
 }
 
 /* ------- The End -------- */
