--- a/html-and-the-web_personal-website/style.css
+++ b/html-and-the-web_personal-website/style.css
@@ -1,3 +1,21 @@
+* {
+  box-sizing: content-box;
+  padding: 10px;
+  margin: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+nav {
+  background-color: violet;
+  border-radius: 10px;
+  font-size: 32px;
+}
+
 img {
   width: 250px;
+  border: solid 5px black;
+  padding: 0;
+  border-radius: 10px;
 }
+
+.hello;
