--- a/react-app/my-journal-app/src/App.css
+++ b/react-app/my-journal-app/src/App.css
@@ -1,3 +1,30 @@
+* {
+  box-sizing: border-box;
+  padding: 5px;
+  margin: 12px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+
+h1, h2, h3, .button{
+text-align: center;
+}
+
+.main__body {
+  margin: auto;
+}
+
+form {
+  text-align: center;
+  
+}
+
+.input__bars {
+  width: fit-content;
+}
+
+/* FROM THE REACT LAUNCH PACK
+
 .App {
   text-align: center;
 }
@@ -35,4 +62,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
